Fixes and improvements to the interface
